<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/ColorOfBackgroundMainDisplay">
    <TextView
        android:text="@string/app_name"
        style="@style/AppNameOnMainDisplay" />
    <Button
        android:id="@+id/search"
        android:text="@string/Search"
        app:icon="@drawable/search_light"
        style="@style/ButtonStyleOnMainDisplay"/>
    <Button
        android:id="@+id/media"
        android:text="@string/Media"
        app:icon="@drawable/media_light"
        style="@style/ButtonStyleOnMainDisplay"/>
    <Button
        android:id="@+id/settings"
        android:layout_marginBottom="28dp"
        android:text="@string/Settings"
        app:icon="@drawable/settings_light"
        style="@style/ButtonStyleOnMainDisplay"/>
</LinearLayout>
