<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">
    <ImageView
        android:id="@+id/arrow_back_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_from_edge"
        android:layout_marginVertical="16dp"
        android:src="@drawable/arrow_back_light">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Settings"
        android:textColor="@color/black"
        android:textSize="@dimen/standart_textsize"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500">
    </TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_marginTop="24dp"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        style="@style/FrameLayoutSettingsDisplay">
        <TextView
            android:text="@string/Dark_theme"
            style="@style/SettingsDisplayTextes">
        </TextView>
        <Switch
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="6dp"
            android:layout_gravity="end">
        </Switch>
    </FrameLayout>
    <FrameLayout
        style="@style/FrameLayoutSettingsDisplay">
        <TextView
            android:text="@string/Share_app"
            style="@style/SettingsDisplayTextes">
        </TextView>
        <ImageView
            android:src="@drawable/share_app_light"
            style="@style/SettingsDisplayImages">
        </ImageView>
    </FrameLayout>
    <FrameLayout
        style="@style/FrameLayoutSettingsDisplay">
        <TextView
            android:text="@string/write_to_support"
            style="@style/SettingsDisplayTextes">
        </TextView>
        <ImageView
            android:src="@drawable/write_to_support_light"
            style="@style/SettingsDisplayImages">
        </ImageView>
    </FrameLayout>
    <FrameLayout
        style="@style/FrameLayoutSettingsDisplay">
        <TextView
            android:text="@string/user_agreement"
            style="@style/SettingsDisplayTextes">
        </TextView>
        <ImageView
            android:src="@drawable/arrow_forward_light"
            style="@style/SettingsDisplayImages">
        </ImageView>
    </FrameLayout>
</LinearLayout>