<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity"
    style="@style/ColorOfBackgroundSettingsDisplay">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:id="@+id/arrow_back_light"
            android:src="@drawable/arrow_back_light"
            style="@style/StyleOfArrowBackSettingsDisplay">
        </ImageView>
        <TextView
            android:text="@string/Search"
            style="@style/StyleOfMainTextOnSettingsDisplay">
        </TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <EditText
            android:id="@+id/search_input_text"
            style="@style/SearchDisplayInputText"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:hint="@string/Search">
        </EditText>
        <ImageView
            android:id="@+id/buttonClearInputText"
            android:src="@drawable/baseline_clear_16"
            style="@style/ButtonStyleClearInputText">
        </ImageView>
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_item"
        tools:itemCount="16"
        android:visibility="gone"
        style="@style/RVStyleOnSearchDisplay"/>
    <LinearLayout
        android:id="@+id/nothingFound"
        android:visibility="gone"
        style="@style/LinearStyleOfSearchDisplay">
        <ImageView
            android:src="@drawable/nothing_found"
            style="@style/ImageStyleOnSearchDisplay">
        </ImageView>
        <TextView
            android:text="@string/nothing_found"
            style="@style/ProblemsTextStyleOnSearchDisplay">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/somethingWentWrong"
        android:visibility="gone"
        style="@style/LinearStyleOfSearchDisplay">
        <ImageView
            android:src="@drawable/something_went_wrong"
            style="@style/ImageStyleOnSearchDisplay">
        </ImageView>
        <TextView
            android:text="@string/something_went_wrong"
            style="@style/ProblemsTextStyleOnSearchDisplay">
        </TextView>
        <Button
            android:id="@+id/buttonRefresh"
            app:cornerRadius="54dp"
            android:text="@string/refresh"
            style="@style/ButtonRefreshStyleOnSearchDisplay">
        </Button>
    </LinearLayout>
</LinearLayout>

